# mcp

./: Dockerfile  pyproject.toml
src/: config.py  context.py  main.py  rest_client.py
src/tools/: conversations.py  files.py  folders.py  rag.py  transcriptions.py
