[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "redis[asyncio]>=5.0",
    "pydantic-settings>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
